Add m4 firmware filename to device tree
Change-Id: I677e5d44f0a2ebef1938d8e56672205725c6808d
Reviewed-on: http://gerrit.pcs.mot.com/585574
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jee Su Chang <w20740@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Reviewed-by: James Wylder <jwylder@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -122,6 +122,7 @@
 		mot,boot0-gpio  = <&gpio1 21 0>; /* gpio-021 */
 		mot,boot1-gpio  = <&gpio1 24 0>; /* gpio-024 */
 		mot,enable-gpio = <&gpio1 28 0>; /* gpio-028 */
+		mot,fw-filename = "m4sensorhub-p0_minnow.bin";
 	};
 };
 
