--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -12,4 +12,142 @@
 / {
 	mmi,revision = "p0";
 	mmi,hwrev = <0x00>;
+
+};
+
+&mcspi1 {
+
+	tps65912 {
+
+	compatible = "ti,tps65912";
+	reg = <0>; /* CS 0 */
+	spi-max-frequency = <1000000>;
+	spi-cs-high;
+
+	dcdc1_avs;
+	dcdc4_avs;
+
+	regulators {
+		sw1_iva_reg: regulator@0 {
+			reg = <0>;
+			regulator-compatible = "DCDC1";
+			regulator-name = "DCDC1";
+			regulator-min-microvolt = <500000>;
+			regulator-max-microvolt = <1287500>;
+			regulator-boot-on;
+			regulator-always-on;
+		};
+
+		sw2_reg: regulator@1 {
+			reg = <1>;
+			regulator-compatible = "DCDC2";
+			regulator-name = "DCDC2";
+			regulator-min-microvolt = <3000000>;
+			regulator-max-microvolt = <3000000>;
+			regulator-boot-on;
+			regulator-always-on;
+		};
+
+		sw3_reg: regulator@2 {
+			reg = <2>;
+			regulator-compatible = "DCDC3";
+			regulator-name = "DCDC3";
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+			regulator-boot-on;
+			regulator-always-on;
+		};
+
+		sw4_core_reg: regulator@3 {
+			reg = <3>;
+			regulator-compatible = "DCDC4";
+			regulator-name = "DCDC4";
+			regulator-min-microvolt = <500000>;
+			regulator-max-microvolt = <1287500>;
+			regulator-boot-on;
+			regulator-always-on;
+		};
+
+		ldo1_reg: regulator@4 {
+			reg = <4>;
+			regulator-compatible = "LDO1";
+			regulator-name = "LDO1";
+			regulator-min-microvolt = <1200000>;
+			regulator-max-microvolt = <1200000>;
+		};
+
+		ldo2_reg: regulator@5 {
+			reg = <5>;
+			regulator-compatible = "LDO2";
+			regulator-name = "LDO2";
+			regulator-min-microvolt = <1700000>;
+			regulator-max-microvolt = <1700000>;
+		};
+
+		ldo3_reg: regulator@6 {
+			reg = <6>;
+			regulator-compatible = "LDO3";
+			regulator-name = "LDO3";
+			regulator-min-microvolt = <2950000>;
+			regulator-max-microvolt = <2950000>;
+		};
+
+		ldo4_reg: regulator@7 {
+			reg = <7>;
+			regulator-compatible = "LDO4";
+			regulator-name = "LDO4";
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+		};
+
+		ldo5_reg: regulator@8 {
+			reg = <8>;
+			regulator-compatible = "LDO5";
+			regulator-name = "LDO5";
+			regulator-min-microvolt = <2800000>;
+			regulator-max-microvolt = <2800000>;
+		};
+
+		ldo6_reg: regulator@9 {
+			reg = <9>;
+			regulator-compatible = "LDO6";
+			regulator-name = "LDO6";
+			regulator-min-microvolt = <2300000>;
+			regulator-max-microvolt = <2300000>;
+		};
+
+		ldo7_reg: regulator@10 {
+			reg = <10>;
+			regulator-compatible = "LDO7";
+			regulator-name = "LDO7";
+			regulator-min-microvolt = <2850000>;
+			regulator-max-microvolt = <2850000>;
+		};
+
+		ldo8_reg: regulator@11 {
+			reg = <11>;
+			regulator-compatible = "LDO8";
+			regulator-name = "LDO8";
+			regulator-min-microvolt = <2800000>;
+			regulator-max-microvolt = <2800000>;
+			regulator-always-on;
+		};
+
+		ldo9_reg: regulator@12 {
+			reg = <12>;
+			regulator-compatible = "LDO9";
+			regulator-name = "LDO9";
+			regulator-min-microvolt = <1050000>;
+			regulator-max-microvolt = <1050000>;
+		};
+
+		ldo10_reg: regulator@13 {
+			reg = <13>;
+			regulator-compatible = "LDO10";
+			regulator-name = "LDO10";
+			regulator-min-microvolt = <2500000>;
+			regulator-max-microvolt = <2500000>;
+		};
+	};
+	};
 };
