Change the WLAN driver from dynamic module to static module
Change the WLAN driver from dynamic module to static module, move it
from hardware/ti/wlan to kernel drivers.

This driver is pulled from https://github.com/TI-OpenLink/wl18xx by
the latest commit as the following.

commit 01d7a03557723e7028b36a39c3de3c33ebf02c53
Author: Arik Nemtsov <arik@wizery.com>
Date:   Mon Oct 7 10:37:43 2013 +0300

    wlcore: decrease warning verbosity during recovery

    Silently ignore repetitive scheduling of recovery work and commands
    being passed to the bus when the HW is not available. This can happen
    many times during recovery and slow it down. It also spams the kernel
    logs.

Change-Id: I5d8bdc05b23632a8de3e106cd54a39f70a6bcbac
Signed-off-by: a1205z <a1205z@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/588639
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Amit Jain <ajain@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/drivers/net/wireless/ti/wlcore/Makefile
+++ b/drivers/net/wireless/ti/wlcore/Makefile
@@ -1,5 +1,16 @@
 wlcore-objs		= main.o cmd.o io.o event.o tx.o rx.o ps.o acx.o \
-			  boot.o init.o debugfs.o scan.o
+			  boot.o init.o debugfs.o scan.o sysfs.o
+
+define filechk_version.h
+	(echo 'static const char *wlcore_timestamp = __TIMESTAMP__;'; \
+	echo 'static const char *wlcore_git_head = \
+			"$(shell git describe --dirty)";')
+endef
+
+$(obj)/version.h: .git/HEAD .git/index .git/refs/tags
+	@$(call filechk,version.h)
+
+$(obj)/main.c: $(src)/version.h
 
 wlcore_spi-objs 	= spi.o
 wlcore_sdio-objs	= sdio.o
