--- a/net/wireless/Kconfig
+++ b/net/wireless/Kconfig
@@ -1,12 +1,5 @@
 config WIRELESS_EXT
-	bool "Wireless extensions"
-	default y
-	---help---
-          This option enables the legacy wireless extensions
-          (wireless network interface configuration via ioctls.)
-
-          Say Y unless you've upgraded all your userspace to use
-          nl80211 instead of wireless extensions.
+	bool
 
 config WEXT_CORE
 	def_bool y
