set the DCDC3 voltage as 1.875v
Set the DCDC3 voltage as 1.8975v
enabling the debugfs for pmic tps
add an interface to dump all pmic tps registers

Change-Id: Ic29d9f383192aa01b73657649d2d11ba113dda89
Signed-off-by: a1205z <a1205z@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/588631
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Reviewed-by: Jee Su Chang <w20740@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/configs/ext_config/eng_bld.config
+++ b/arch/arm/configs/ext_config/eng_bld.config
@@ -41,3 +41,4 @@ CONFIG_DEBUG_OMAP3UART3=y
 # CONFIG_DEBUG_ZOOM_UART is not set
 CONFIG_DEBUG_LL_INCLUDE="debug/omap2plus.S"
 CONFIG_EARLY_PRINTK=y
+CONFIG_MFD_TPS65912_DEBUGFS=y
