cpcap: dts: Re-enable CPCAP via device_tree
CPCAP driver registration trigger is moved to device_tree so
it can be controlled by hardware revision.  The whole CPCAP
driver is not ported to the new device_tree format because it
is obsolete hardware that will be deprecated in the near
future.  HW specific configuration has been moved from
board file to drivers/mfd/cpcap-minnow.c for the time being

Change-Id: If465ef99e9313ad2e833545fb8e463f49b0209c4

Conflicts:
	drivers/mfd/cpcap-minnow.c
Change-Id: I7935263d3d7003d3435b57377c9304ef48377f09
Reviewed-on: http://gerrit.pcs.mot.com/599815
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jee Su Chang <w20740@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-casper-p1.dts
+++ b/arch/arm/boot/dts/omap3-casper-p1.dts
@@ -35,3 +35,14 @@
     };
 };
 
+&mcspi1 {
+	clock-frequency = <3000000>;
+	cpcap {
+		compatible = "mot,cpcap";
+		reg = <0>; /* CS 0 */
+		spi-max-frequency = <3000000>;
+		spi-cs-high;
+
+		irq-gpio = <0>;
+	};
+};
