--- a/drivers/mfd/Makefile
+++ b/drivers/mfd/Makefile
@@ -163,6 +163,7 @@ cpcap-objs                      := cpcap-core.o \
                                    cpcap-usb-det.o \
                                    cpcap-key.o \
                                    cpcap-adc.o \
+                                   cpcap-minnow.o \
                                    cpcap-uc.o
 obj-$(CONFIG_MFD_CPCAP)          += cpcap.o
 
