vib-gpio: Integrate into device_tree
Integrate the vib-gpio driver into device_tree

Change-Id: Idb30cc3b8ab8d26acdb18bf29ce7d9f621d4bf48
Reviewed-on: http://gerrit.pcs.mot.com/590173
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jee Su Chang <w20740@motorola.com>
Reviewed-by: Yin-Hu Chen <a1205z@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -13,6 +13,11 @@
 	mmi,revision = "p0";
 	mmi,hwrev = <0x00>;
 
+
+	vib-gpio {
+		compatible = "mot,vib-gpio";
+		vib-gpio-supply = <&ldo6_reg>;
+	};
 };
 
 &mcspi1 {
