--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -1836,6 +1836,7 @@ CONFIG_USB_PHY=y
 # CONFIG_USB_RCAR_PHY is not set
 # CONFIG_USB_ULPI is not set
 CONFIG_CPCAP_USB=y
+CONFIG_USB_TUSB=y
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
