Config SPI CS1 for Silego in kernel
config SPI CS1 as mode0,output which is used by Silego

Change-Id: Id3978f4241487aadfcb1926c61ed07a35e284784
Signed-off-by: a1205z <a1205z@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/590034
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jee Su Chang <w20740@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -170,13 +170,13 @@
 			0x152 0x100	/* UART1_RX, MODE0 | INPUT */
 			0x168 0x104	/* MCBSP1_CLKX, MODE4 | INPUT */
 			0x16c 0x004	/* UART3_RTS_SD, MODE4 | OUTPUT */
-			0x1a0 0x11b	/* MCSPI1_CS1, MODE3 | INPUT_PULLUP */
 			0x18e 0x118	/* I2C2_SCL, MODE0 | INPUT_PULLUP */
 			0x190 0x118	/* I2C2_SDA, MODE0 | INPUT_PULLUP */
 			0x198 0x100     /* MCSPI1_CLK, MODE0 | INPUT */
 			0x19a 0x000     /* MCSPI1_SIMO, MODE0 | OUTPUT */
 			0x19c 0x100     /* MCSPI1_SOMI, MODE0 | INPUT */
 			0x19e 0x000     /* MCSPI1_CS0, MODE0 | OUTPUT */
+			0x1a0 0x000     /* MCSPI1_CS1, MODE0 | OUTPUT */
 			0x1a6 0x100	/* MCSPI2_CLK, MODE0 | INPUT */
 			0x1a8 0x000	/* MCSPI2_SIMO, MODE0 | OUTPUT */
 			0x1aa 0x100	/* MCSPI2_SOMI, MODE0 | INPUT */
