dts: fix regulator reg sizes
Using default setting for address-cells and size-cells
gives warnings.  All the registers are of size 1, so
a single address should be enough.

Change-Id: Ife57a06d003b438af873c610efbde953aecdeb08
Signed-off-by: James Wylder <jwylder@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/590125
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Reviewed-by: Yin-Hu Chen <a1205z@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -28,6 +28,9 @@
 	dcdc4_avs;
 
 	regulators {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
 		sw1_iva_reg: regulator@0 {
 			reg = <0>;
 			regulator-compatible = "DCDC1";
