Remove wrist detect gpio from minnow device tree.
Change-Id: I2d56ec2a95934307e86a8c976813b9d60c567529
Reviewed-on: http://gerrit.pcs.mot.com/599593
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-casper-p1.dts
+++ b/arch/arm/boot/dts/omap3-casper-p1.dts
@@ -16,6 +16,42 @@
 	vib-gpio {
 		compatible = "mot,vib-gpio";
 	};
+
+        m4sensor {
+                compatible = "simple-bus";
+                wrist {
+                        compatible = "mot,m4wrist";
+                        mot,wrist_xres = <&gpio6 15 0>; /* xres gpio-175 */
+                        mot,wrist_clk =  <&gpio1 29 0>; /* clk  gpio-029 */
+                        mot,wrist_data = <&gpio1 15 0>; /* data gpio-015 */
+                };
+
+                pressure {
+                        compatible = "mot,m4pressure";
+                };
+                mpu9150 {
+                        compatible = "mot,m4mpu9150";
+                };
+                pedometer {
+                        compatible = "mot,m4pedometer";
+                };
+                passive {
+                        compatible = "mot,m4passive";
+                };
+                gesture {
+                        compatible = "mot,m4gesture";
+                };
+                display {
+                        compatible = "mot,m4display";
+                };
+                download {
+                        compatible = "mot,m4download";
+                };
+                stillmode {
+                        compatible = "mot,m4stillmode";
+                };
+        };
+
 };
 
 &i2c2 {
