pinctrl: Allow empty pinctrl list
Allow an empty pincontrol list in a device_node as long as
there is at least one valid list.  This allows empty lists
to be defined for products which don't have a pingroup that
are added on later hardware revisions.

Change-Id: I746b2a342979cae6534df768880b3767d1fce25c
Reviewed-on: http://gerrit.pcs.mot.com/601620
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Zong-Hua Liu <a17671@motorola.com>
Reviewed-by: Jee Su Chang <w20740@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -195,7 +195,7 @@
 		>;
 	};
 
-	usb_phy_pins: pinmux_board_pins {
+	usb_phy_pins: pinmux_usb_phy_pins {
 	};
 };
 
@@ -203,7 +203,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&wkup_pins>;
 
-	wkup_pins: pinmux_board_pins {
+	wkup_pins: pinmux_wakeup_pins {
 		pinctrl-single,pins = <
 			0x01a 0x10c     /* SYS_CLKOUT1, MODE4 | INPUT_PULLDOWN */
 			0x05a 0x004     /* GPIO_129, MODE4 | OUTPUT */
