--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -11,6 +11,13 @@
 	model = "Motorola OMAP3 Platform";
 	compatible = "mot,omap3-minnow", "ti,omap3";
 
+	c55-ctrl@0 {
+		compatible = "ti,c55-ctrl";
+		reg = <0 0>;
+		gpios = <&gpio3 12 1>, /* IRQ   gpio_ap_int gpio-076 */
+			<&gpio3 16 0>, /*  gpio_reset gpio-80*/
+			<&gpio3 17 2>; /* gpio_c55_int gpio-81*/
+	};
 	Display@0 {
 		compatible = "mot,minnow-panel-dsi-cm";
 		/* 0: MINNOW_PANEL_CM_220X176
@@ -154,6 +161,9 @@
 			0x08e 0x104	/* GPMC_CLK, MODE4 | INPUT */
 			0x0a0 0x002	/* GPMC_WAIT2, MODE2 | OUTPUT */
 			0x0a2 0x102	/* GPMC_WAIT3, MODE2 | INPUT */
+			0x0b8 0x104	/*  DSS_DATA6, MODE4 | INPUT */
+			0x0c0 0x004	/*  DSS_DATA10, MODE4 | OUTPUT */
+			0x0c2 0x004	/*  DSS_DATA11, MODE4 | OUTPUT */
 			0x0c6 0x004	/* DSS_DATA13, MODE4 | OUTPUT */
 			0x0ea 0x004	/* MUXCAM_D2, MODE4 | OUTPUT */
 			0x0e4 0x004	/* CAM_FLD, MODE4 | OUTPUT */
@@ -168,6 +178,10 @@
 			0x14e 0x000	/* UART1_RTS, MODE0 | OUTPUT */
 			0x150 0x100	/* UART1_CTS, MODE0 | INPUT */
 			0x152 0x100	/* UART1_RX, MODE0 | INPUT */
+			0x154 0x100	/* MCBSP4_CLKX, MODE0| INPUT*/
+			0x156 0x100	/* MCBSP4_DR, MODE0 | INPUT */
+			0x158 0x000 	/* MCBSP4_DX, MODE0 | OUTPUT  */
+			0x15a 0x118	/* MCBSP4_FSX,MODE0 | INPUT_PULLUP*/
 			0x168 0x104	/* MCBSP1_CLKX, MODE4 | INPUT */
 			0x16c 0x004	/* UART3_RTS_SD, MODE4 | OUTPUT */
 			0x18e 0x118	/* I2C2_SCL, MODE0 | INPUT_PULLUP */
