dts: minnow: Add support for minnow p0 portable
Set the hwrev field in minnow-p0.dts to support P0 portable.  If
needed a seperate DTS can be created in the future.

Change-Id: I8bf48277fcdc66fdff1627a246144fe318d9e679
Reviewed-on: http://gerrit.pcs.mot.com/602114
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jee Su Chang <w20740@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -11,7 +11,10 @@
 
 / {
 	mmi,revision = "p0";
-	mmi,hwrev = <0x00>;
+	mmi,hwrev = <
+		0x00   /* Minnow P0 wingboard */
+		0x01   /* Minnow P0 portable */
+	>;
 
 
 	vib-gpio {
