dts: Configure pinmux for I2C-3 bus.
Change-Id: I18cccf3da22209dbb4c6ddb1e137552182ff0762
Reviewed-on: http://gerrit.pcs.mot.com/602443
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jee Su Chang <w20740@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -186,6 +186,8 @@
 			0x16c 0x004	/* UART3_RTS_SD, MODE4 | OUTPUT */
 			0x18e 0x118	/* I2C2_SCL, MODE0 | INPUT_PULLUP */
 			0x190 0x118	/* I2C2_SDA, MODE0 | INPUT_PULLUP */
+			0x192 0x118	/* I2C3_SCL, MODE0 | INPUT_PULLUP */
+			0x194 0x118	/* I2C3_SDA, MODE0 | INPUT_PULLUP */
 			0x198 0x100     /* MCSPI1_CLK, MODE0 | INPUT */
 			0x19a 0x000     /* MCSPI1_SIMO, MODE0 | OUTPUT */
 			0x19c 0x100     /* MCSPI1_SOMI, MODE0 | INPUT */
