Enable regulator when C55 initialized and enable loadswitch when LDO9 is turned on Author: Jee Su Chang - w20740
Change-Id: I5376c4da70385fccf9cc576df66775f7d25a0ec0
Reviewed-on: http://gerrit.pcs.mot.com/603308
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Reviewed-by: Viditha Hanumanthareddy <ngjq36@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -16,6 +16,14 @@
 		0x01   /* Minnow P0 portable */
 	>;
 
+	c55-ctrl@0 {
+		compatible = "ti,c55-ctrl";
+		reg = <0 0>;
+		gpios = <&gpio3 12 1>, /* IRQ   gpio_ap_int gpio-076 */
+			<&gpio3 16 0>, /*  gpio_reset gpio-80*/
+			<&gpio3 17 2>; /* gpio_c55_int gpio-81*/
+		c55-ctrl-supply = <&ldo9_reg>;
+	};
 
 	vib-gpio {
 		compatible = "mot,vib-gpio";
