--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -11,13 +11,6 @@
 	model = "Motorola OMAP3 Platform";
 	compatible = "mot,omap3-minnow", "ti,omap3";
 
-	c55-ctrl@0 {
-		compatible = "ti,c55-ctrl";
-		reg = <0 0>;
-		gpios = <&gpio3 12 1>, /* IRQ   gpio_ap_int gpio-076 */
-			<&gpio3 16 0>, /*  gpio_reset gpio-80*/
-			<&gpio3 17 2>; /* gpio_c55_int gpio-81*/
-	};
 	Display@0 {
 		compatible = "mot,minnow-panel-dsi-cm";
 		/* 0: MINNOW_PANEL_CM_220X176
@@ -170,9 +163,9 @@
 			0x0e6 0x11c	/* CAM_D0, MODE4 | INPUT_PULLUP */
 			0x122 0x004	/* SIM_CLK, MODE4 | OUTPUT */
 			0x124 0x104	/* SIM_PWRCTRL, MODE4 | INPUT */
-			0x144 0x000	/* UART2_TX, MODE0  | OUTPUT */
+			0x144 0x100	/* UART2_CTS, MODE0  | OUTPUT */
 			0x146 0x000	/* UART2_RTS, MODE0 | OUTPUT */
-			0x148 0x100	/* UART2_CTS, MODE0 | INPUT */
+			0x148 0x000	/* UART2_TX, MODE0 | INPUT */
 			0x14a 0x100	/* UART2_RX, MODE0 | INPUT */
 			0x14c 0x000	/* UART1_TX, MODE0 | OUTPUT */
 			0x14e 0x000	/* UART1_RTS, MODE0 | OUTPUT */
@@ -180,7 +173,7 @@
 			0x152 0x100	/* UART1_RX, MODE0 | INPUT */
 			0x154 0x100	/* MCBSP4_CLKX, MODE0| INPUT*/
 			0x156 0x100	/* MCBSP4_DR, MODE0 | INPUT */
-			0x158 0x000 	/* MCBSP4_DX, MODE0 | OUTPUT  */
+			0x158 0x000	/* MCBSP4_DX, MODE0 | OUTPUT  */
 			0x15a 0x118	/* MCBSP4_FSX,MODE0 | INPUT_PULLUP*/
 			0x168 0x104	/* MCBSP1_CLKX, MODE4 | INPUT */
 			0x16c 0x004	/* UART3_RTS_SD, MODE4 | OUTPUT */
@@ -188,11 +181,11 @@
 			0x190 0x118	/* I2C2_SDA, MODE0 | INPUT_PULLUP */
 			0x192 0x118	/* I2C3_SCL, MODE0 | INPUT_PULLUP */
 			0x194 0x118	/* I2C3_SDA, MODE0 | INPUT_PULLUP */
-			0x198 0x100     /* MCSPI1_CLK, MODE0 | INPUT */
-			0x19a 0x000     /* MCSPI1_SIMO, MODE0 | OUTPUT */
-			0x19c 0x100     /* MCSPI1_SOMI, MODE0 | INPUT */
-			0x19e 0x000     /* MCSPI1_CS0, MODE0 | OUTPUT */
-			0x1a0 0x000     /* MCSPI1_CS1, MODE0 | OUTPUT */
+			0x198 0x100	/* MCSPI1_CLK, MODE0 | INPUT */
+			0x19a 0x000	/* MCSPI1_SIMO, MODE0 | OUTPUT */
+			0x19c 0x100	/* MCSPI1_SOMI, MODE0 | INPUT */
+			0x19e 0x000	/* MCSPI1_CS0, MODE0 | OUTPUT */
+			0x1a0 0x000	/* MCSPI1_CS1, MODE0 | OUTPUT */
 			0x1a6 0x100	/* MCSPI2_CLK, MODE0 | INPUT */
 			0x1a8 0x000	/* MCSPI2_SIMO, MODE0 | OUTPUT */
 			0x1aa 0x100	/* MCSPI2_SOMI, MODE0 | INPUT */
