--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -15,22 +15,25 @@
 		compatible = "mot,minnow-panel-dsi-cm";
 		/* 0: MINNOW_PANEL_CM_220X176
 		 * 1: MINNOW_PANEL_CM_220X220
+		 * 2: MINNOW_PANEL_CM_BRIDGE_320X320
 		 */
-		id_panel = <1>;
-		gpio_reset = <&gpio1 14 0>;	/* RESET gpio-14 */
+		id_panel = <2>;
+		gpio_panel_reset = <&gpio1 14 0>;	/* RESET gpio-14 */
+		gpio_bridge_reset = <&gpio1 23 0>;	/* RESET gpio-23 */
+		gpio_clk_en = <&gpio6 17 0>;	/* RESET gpio-177 */
 		/* declare it if ext_te enable */
 		//gpio_te = <&gpio1 0 0>;	/* EXT_TE gpio-0 */
-		pins = <0 1 2 3>;		/* DSI Pin config */
-		esd_interval = <0>;		/* ESD_INTERVAL */
-		pixel_clock = <4608>;		/* kHZ = 320*240*60/1000*/
+		//pins = <0 1 2 3>;		/* DSI Pin config */
+		//esd_interval = <0>;		/* ESD_INTERVAL */
+		//pixel_clock = <4608>;		/* kHZ = 320*240*60/1000*/
 		/* 0: RGB888
 		 * 1: RGB666
 		 * 2: RGB666_PACKED
 		 * 3: RGB565
 		 */
-		pixel_format = <1>;
-		hs_clk = <100000000 150000000>;	/* min max*/
-		lp_clk = <7000000 9000000>; 	/* min max*/
+		//pixel_format = <1>;
+		//hs_clk = <90000000 150000000>;	/* min max*/
+		//lp_clk = <7000000 9000000>; 	/* min max*/
 	};
 
 	/* FIXME: this dummy regulator is only needed as
@@ -154,6 +157,10 @@
 			0x08e 0x104	/* GPMC_CLK, MODE4 | INPUT */
 			0x0a0 0x002	/* GPMC_WAIT2, MODE2 | OUTPUT */
 			0x0a2 0x102	/* GPMC_WAIT3, MODE2 | INPUT */
+			0x0ac 0x001	/* DSI_DX0, MODE1 | OUTPUT */
+			0x0ae 0x001	/* DSI_DY0, MODE1 | OUTPUT */
+			0x0b0 0x001	/* DSI_DX1, MODE1 | OUTPUT */
+			0x0b2 0x001	/* DSI_DY1, MODE1 | OUTPUT */
 			0x0b8 0x104	/*  DSS_DATA6, MODE4 | INPUT */
 			0x0c0 0x004	/*  DSS_DATA10, MODE4 | OUTPUT */
 			0x0c2 0x004	/*  DSS_DATA11, MODE4 | OUTPUT */
