ARM: dts: omap3-minnow: add max17050 fuel gauge
Change-Id: I3fe3b01325e33d344af4adb24e093a891c231f0f
Signed-off-by: Mohsan Habibi <mohsan@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/604056
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -142,6 +142,11 @@
 		compatible = "ti,lm3535";
 		reg = <0x38>;
 	};
+
+	max17050@36 {
+		compatible = "maxim,max17050";
+		reg = <0x36>;
+	};
 };
 
 
