--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -453,6 +453,7 @@ CONFIG_ALIGNMENT_TRAP=y
 # Boot options
 #
 CONFIG_USE_OF=y
+CONFIG_BOOTINFO=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES="omap3-minnow-p0 omap3-casper-p1"
 CONFIG_ATAGS=y
