Factory : Support for Factory kill disable
Change-Id: I467baa114ee652367cd84819fa6214f03b935736
Reviewed-on: http://gerrit.pcs.mot.com/605223
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -202,6 +202,7 @@
 			0x1a8 0x000	/* MCSPI2_SIMO, MODE0 | OUTPUT */
 			0x1aa 0x100	/* MCSPI2_SOMI, MODE0 | INPUT */
 			0x1ac 0x000	/* MCSPI2_CS0, MODE0 | OUTPUT */
+			0x1ae 0x004	/* GPIO_182, MODE4 | OUTPUT */
 			0x1b0 0x104	/* SYS_NIRQ, MODE4 | INPUT  */
 			0x1b2 0x004	/* SYS_CLKOUT2, MODE4 | OUTPUT  */
 			0x5a8 0x11a	/* ETK_CLK, MODE2 | INPUT_PULLUP */
