--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -38,6 +38,19 @@
 		csn-gpio = <27>;
 		reg = <0 0>;
 	};
+
+	/* Temporary enable factory-cable in device-tree
+	 * Should remove it when boot-reason is implemented in boot-loader
+	 */
+	chosen {
+		mmi,factory-cable;
+	};
+	factory_support {
+		compatible = "mmi,factory-support";
+
+		gpios = <&gpio6 22 0x0>; /*gpio-182 GPIOF_DIR_OUT|GPIOF_INIT_LOW */
+		gpio-names = "factory_kill_disable";
+	};
 };
 
 &usb_phy_pins {
