--- a/arch/arm/configs/eng_minnow_defconfig
+++ b/arch/arm/configs/eng_minnow_defconfig
@@ -963,6 +963,7 @@ CONFIG_VIB_GPIO=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_C55_CTRL=y
+CONFIG_MMI_FACTORY=y
 # CONFIG_C2PORT is not set
 
 #
