--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -541,6 +541,17 @@ config C55_CTRL
 	  This option enables device driver to control the TI C55 IC. This
 	  is intended to be a simple driver which only exports the GPIOs
 	  for user space use.
+
+config MMI_FACTORY
+	tristate "Motorola Mobility Factory driver"
+	depends on OF
+	help
+	  This option enables a device driver that is collects many
+	  of the extensions needed by the Motorola factory.  If you
+	  aren't literally building a Motorola Device you can safely
+	  say no here.
+	default n
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
