Shutting down minnow should stop it from drawing power
Change-Id: Icba58f4506a13165ce64f52f4e550a2de418cf98
Reviewed-on: http://gerrit.pcs.mot.com/606128
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -51,6 +51,14 @@
 		gpios = <&gpio6 22 0x0>; /*gpio-182 GPIOF_DIR_OUT|GPIOF_INIT_LOW */
 		gpio-names = "factory_kill_disable";
 	};
+
+	pmic-wdi@0 {
+		compatible = "mot,pmic-wdi";
+		gpios  = <&gpio5  15 0x0>; /* gpio-143 GPIOF_DIR_OUT|GPIOF_INIT_LOW */
+		pinctrl-names = "output", "tristate";
+		pinctrl-0 = <&wdi_phy_gpio_mode>;
+		pinctrl-1 = <&wdi_phy_safe_mode>;
+	};
 };
 
 &usb_phy_pins {
