--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -1426,8 +1426,9 @@ CONFIG_BATTERY_MAX17042=y
 # CONFIG_BATTERY_GOLDFISH is not set
 CONFIG_CHARGER_CPCAP=y
 CONFIG_BATTERY_CPCAP=y
-# CONFIG_POWER_RESET is not set
+CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_RESTART is not set
+CONFIG_POWER_RESET_MINNOW=y
 # CONFIG_POWER_AVS is not set
 # CONFIG_HWMON is not set
 # CONFIG_THERMAL is not set
