drivers: mfd: Add power key to TPS65912
Change-Id: Ibefa80cda87365f49c0c24615a28c27537b87b76
Reviewed-on: http://gerrit.pcs.mot.com/606523
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -92,6 +92,10 @@
 
 	tps_irq_gpio = <0>;
 
+	powerkey_up_irq = <10>;		/* TPS65912_IRQ_GPIO3_R the key down */
+	powerkey_down_irq = <11>;	/* TPS65912_IRQ_GPIO3_F the key up */
+	powerkey_code = <116>;		/* power key code for android*/
+
 	regulators {
 		#address-cells = <1>;
 		#size-cells = <0>;
