dts: mmc2 voltage rails to tps:ldo5/sw3
Update the supplies to reflect the actual power tree.  This
resolves issue during resume

mmc2 is powered by the 2.8 Volt LDO5 and the 1.8 Volt SW3.

Change-Id: I65952135c4082d731c4026dba8ad843f7138ecc8
Signed-off-by: James Wylder <jwylder@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/606687
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -223,3 +223,11 @@
 	};
 	};
 };
+
+/* internal */
+&mmc2 {
+	ti,non-removeable;
+	bus-width = <8>;
+	vmmc-supply = <&ldo5_reg>;
+	vmmc_aux-supply = <&sw3_reg>;
+};
