dts: add support for P1 hardware
P1 (rev 01) hardware has hwrev=0x2 (small test build)
P1 (rev 02) hardware has hwrev=0x3

For now they will be added to the omap3-minnow-p0.dts.  If special
SW support for P1 is needed in the future, the support can be moved
into a new DTS

Change-Id: I809807b9b33c2581a9b67266245e087f686c68bb
Reviewed-on: http://gerrit.pcs.mot.com/607084
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jee Su Chang <w20740@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -14,6 +14,8 @@
 	mmi,hwrev = <
 		0x00   /* Minnow P0 wingboard */
 		0x01   /* Minnow P0 portable */
+		0x03   /* Minnow P1A portable */
+		0x02   /* Minnow P1B portable */
 	>;
 
 	c55-ctrl@0 {
