Skeleton RTC driver for minnow
Change-Id: Idafd43add6787f8ce752df9a0455db9bd9257ea7
Reviewed-on: http://gerrit.pcs.mot.com/607099
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -61,6 +61,10 @@
 		pinctrl-0 = <&wdi_phy_gpio_mode>;
 		pinctrl-1 = <&wdi_phy_safe_mode>;
 	};
+
+	rtc_sensorhub@0 {
+		compatible = "mot,rtc_from_sensorhub";
+	};
 };
 
 &usb_phy_pins {
