--- a/arch/arm/configs/eng_minnow_defconfig
+++ b/arch/arm/configs/eng_minnow_defconfig
@@ -17,6 +17,7 @@ CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_VECTORS_BASE=0xffff0000
 CONFIG_ARM_PATCH_PHYS_VIRT=y
 CONFIG_GENERIC_BUG=y
+CONFIG_BOOTINFO=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
@@ -456,7 +457,6 @@ CONFIG_ALIGNMENT_TRAP=y
 # Boot options
 #
 CONFIG_USE_OF=y
-CONFIG_BOOTINFO=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES="omap3-minnow-p0 omap3-casper-p1"
 CONFIG_ATAGS=y
@@ -1433,6 +1433,7 @@ CONFIG_BATTERY_MAX17042=y
 CONFIG_CHARGER_CPCAP=y
 CONFIG_BATTERY_CPCAP=y
 CONFIG_POWER_RESET=y
+# CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_RESTART is not set
 CONFIG_POWER_RESET_MINNOW=y
 # CONFIG_POWER_AVS is not set
@@ -1985,6 +1986,7 @@ CONFIG_RTC_INTF_DEV=y
 # CONFIG_RTC_DRV_RX8025 is not set
 # CONFIG_RTC_DRV_EM3027 is not set
 # CONFIG_RTC_DRV_RV3029C2 is not set
+CONFIG_RTC_DRV_SENSORHUB=y
 
 #
 # SPI RTC drivers
