--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -488,6 +488,12 @@ config RTC_DRV_RV3029C2
 	  This driver can also be built as a module. If so, the module
 	  will be called rtc-rv3029c2.
 
+config RTC_DRV_SENSORHUB
+	bool "SensorHub based RTC"
+	help
+	  If you say yes here you get support for the SensorHub based
+	  RTC.
+
 endif # I2C
 
 comment "SPI RTC drivers"
