--- a/net/rfkill/Kconfig
+++ b/net/rfkill/Kconfig
@@ -47,3 +47,11 @@ config RFKILL_GPIO
 	  If you say yes here you get support of a generic gpio RFKILL
 	  driver. The platform should fill in the appropriate fields in the
 	  rfkill_gpio_platform_data structure and pass that to the driver.
+
+config RFKILL_WL18XX
+	tristate "Bluetooth power control driver for TI wl18xx"
+	depends on RFKILL
+	default n
+	help
+	  Creates an rfkill entry in sysfs for power control of Bluetooth/FM
+	  TI wl18xx chips.
