Initial audio bringup from C55 DSP Author: Jee Su Chang - w20740
Change-Id: I26dcea03727462b0a776618b69b0a66071e9acd8
Reviewed-on: http://gerrit.pcs.mot.com/607244
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -67,6 +67,13 @@
 	};
 };
 
+&audio_gpio_pins {
+	pinctrl-single,pins = <
+		0x0ba 0x004	/* DSS_DATA7, MODE4 | OUTPUT */
+		0x0c8 0x004	/* DSS_DATA14, MODE4 | OUTPUT */
+	>;
+};
+
 &usb_phy_pins {
 	pinctrl-single,pins = <
 		0x140 0x104     /* MCBSP3_CLKX, MODE4 (GPIO-142) | INPUT */
