--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -287,6 +287,9 @@ config SND_SOC_MAX98095
 config SND_SOC_MAX9850
 	tristate
 
+config SND_SOC_C55
+	tristate
+
 config SND_SOC_OMAP_HDMI_CODEC
        tristate
 
