--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -91,6 +91,18 @@
 			compatible = "mot,m4stillmode";
 		};
 	};
+
+	sound {
+		compatible = "mot,omap-soc-c55";
+		mot,model = "omap3c55audio";
+		mot,mcbsp = <&mcbsp4>;
+	};
+
+	soc {
+		compatible = "mot,soc-c55";
+		mot,mic_bias1_en = <&gpio3 13 0>; /* gpio-077 */
+		mot,mic_bias3_en = <&gpio3 20 0>; /* gpio-084 */
+	};
 };
 
 
@@ -154,6 +166,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <
 		&board_pins
+		&audio_gpio_pins
 		&usb_phy_pins
 	>;
 
@@ -183,10 +196,10 @@
 			0x14e 0x000	/* UART1_RTS, MODE0 | OUTPUT */
 			0x150 0x100	/* UART1_CTS, MODE0 | INPUT */
 			0x152 0x100	/* UART1_RX, MODE0 | INPUT */
-			0x154 0x100	/* MCBSP4_CLKX, MODE0| INPUT*/
+			0x154 0x100	/* MCBSP4_CLKX, MODE0 | INPUT */
 			0x156 0x100	/* MCBSP4_DR, MODE0 | INPUT */
-			0x158 0x000	/* MCBSP4_DX, MODE0 | OUTPUT  */
-			0x15a 0x118	/* MCBSP4_FSX,MODE0 | INPUT_PULLUP*/
+			0x158 0x000	/* MCBSP4_DX, MODE0 | OUTPUT */
+			0x15a 0x118	/* MCBSP4_FSX,MODE0 | INPUT_PULLUP */
 			0x168 0x104	/* MCBSP1_CLKX, MODE4 | INPUT */
 			0x16c 0x004	/* UART3_RTS_SD, MODE4 | OUTPUT */
 			0x18e 0x118	/* I2C2_SCL, MODE0 | INPUT_PULLUP */
@@ -202,7 +215,7 @@
 			0x1a8 0x000	/* MCSPI2_SIMO, MODE0 | OUTPUT */
 			0x1aa 0x100	/* MCSPI2_SOMI, MODE0 | INPUT */
 			0x1ac 0x000	/* MCSPI2_CS0, MODE0 | OUTPUT */
-			0x1ae 0x004	/* GPIO_182, MODE4 | OUTPUT */
+			0x1ae 0x004	/* MCSPI2_CS1, MODE4 | OUTPUT */
 			0x1b0 0x104	/* SYS_NIRQ, MODE4 | INPUT  */
 			0x1b2 0x004	/* SYS_CLKOUT2, MODE4 | OUTPUT  */
 			0x5a8 0x11a	/* ETK_CLK, MODE2 | INPUT_PULLUP */
@@ -215,6 +228,9 @@
 			0x5c0 0x004	/* ETK_D10, MODE4 | OUTPUT */
 			0x5c8 0x004	/* ETK_D14, MODE4 | OUTPUT */
 		>;
+	};
+
+	audio_gpio_pins: pinmux_audio_gpio_pins {
 	};
 
 	usb_phy_pins: pinmux_usb_phy_pins {
