defconfig: minnow: enable wl18xx BT/FM rfkill
Change-Id: I7e48f7f4a355b1f9609dc8f84ccfe7b1bc4177df
Reviewed-on: http://gerrit.pcs.mot.com/607188
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/configs/eng_minnow_defconfig
+++ b/arch/arm/configs/eng_minnow_defconfig
@@ -796,7 +796,7 @@ CONFIG_RFKILL=y
 # CONFIG_RFKILL_INPUT is not set
 # CONFIG_RFKILL_REGULATOR is not set
 # CONFIG_RFKILL_GPIO is not set
-CONFIG_RFKILL_WL127X=y
+CONFIG_RFKILL_WL18XX=y
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
