--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -124,7 +124,6 @@
 			regulator-min-microvolt = <500000>;
 			regulator-max-microvolt = <1287500>;
 			regulator-boot-on;
-			regulator-always-on;
 		};
 
 		sw2_reg: regulator@1 {
@@ -154,7 +153,6 @@
 			regulator-min-microvolt = <500000>;
 			regulator-max-microvolt = <1287500>;
 			regulator-boot-on;
-			regulator-always-on;
 		};
 
 		ldo1_reg: regulator@4 {
@@ -219,6 +217,7 @@
 			regulator-name = "LDO8";
 			regulator-min-microvolt = <2800000>;
 			regulator-max-microvolt = <2800000>;
+			regulator-boot-on;
 			regulator-always-on;
 		};
 
@@ -236,6 +235,7 @@
 			regulator-name = "LDO10";
 			regulator-min-microvolt = <2500000>;
 			regulator-max-microvolt = <2500000>;
+			regulator-always-on;
 		};
 	};
 	};
