--- a/drivers/usb/phy/Kconfig
+++ b/drivers/usb/phy/Kconfig
@@ -18,8 +18,7 @@ menuconfig USB_PHY
 
 config USB_OTG_WAKELOCK
 	bool "Hold a wakelock when USB connected"
-	depends on WAKELOCK
-	select USB_OTG_UTILS
+	depends on PM_WAKELOCKS
 	help
 	  Select this to automatically hold a wakelock when USB is
 	  connected, preventing suspend.
