config: minnow enable usb_otg_wakelock
Enable upstream OTG_WAKELOCK code for minnow

Change-Id: I8f24308c59da2ea22363e3a318fa4e80d49c10a6
Reviewed-on: http://gerrit.pcs.mot.com/607997
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Douglas Zobel <dzobel1@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -1864,6 +1864,7 @@ CONFIG_MUSB_PIO_ONLY=y
 # CONFIG_USB_EZUSB_FX2 is not set
 # CONFIG_USB_HSIC_USB3503 is not set
 CONFIG_USB_PHY=y
+CONFIG_USB_OTG_WAKELOCK=y
 # CONFIG_NOP_USB_XCEIV is not set
 # CONFIG_OMAP_CONTROL_USB is not set
 # CONFIG_OMAP_USB2 is not set
