defconfig: minnow: enable m25p80 spi flash driver
Enable m25p80 spi flash driver for Winbond W25Q80BW.

Change-Id: I7638a3e6e6ed33cb37ae581f3091ecd9953f684c
Signed-off-by: Mohsan Habibi <mohsan@motorola.com>

--- a/arch/arm/configs/minnow_defconfig
+++ b/arch/arm/configs/minnow_defconfig
@@ -880,7 +880,8 @@ CONFIG_MTD_CFI_I2=y
 # Self-contained MTD device drivers
 #
 # CONFIG_MTD_DATAFLASH is not set
-# CONFIG_MTD_M25P80 is not set
+CONFIG_MTD_M25P80=y
+# CONFIG_M25PXX_USE_FAST_READ is not set
 # CONFIG_MTD_SST25L is not set
 # CONFIG_MTD_SLRAM is not set
 # CONFIG_MTD_PHRAM is not set
