ARM: dts: omap3-minnow: add c55-ctrl pincfgs and regulators
Add two sets of pin cfgs, one for while c55 is in reset or powered off
and the other when c55 has power. Also, specify regulators needed when
c55 is supplied power.

Change-Id: I54fd141346487035b594d5e2b5bf20725828e84e
Signed-off-by: Mohsan Habibi <mohsan@motorola.com>

--- a/arch/arm/boot/dts/omap3-minnow-p0.dts
+++ b/arch/arm/boot/dts/omap3-minnow-p0.dts
@@ -51,7 +51,11 @@
 		gpios = <&gpio3 12 1>, /* IRQ   gpio_ap_int gpio-076 */
 			<&gpio3 16 0>, /*  gpio_reset gpio-80*/
 			<&gpio3 17 2>; /* gpio_c55_int gpio-81*/
-		c55-ctrl-supply = <&ldo9_reg>;
+		vddc-supply = <&ldo9_reg>;
+		vddldo-supply = <&ldo3_reg>;
+		pinctrl-names = "off", "on";
+		pinctrl-0 = <&c55_pins_off>;
+		pinctrl-1 = <&c55_pins_on>;
 	};
 
 	vib-gpio {
