--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -194,10 +194,6 @@
 			0x19c 0x100	/* MCSPI1_SOMI, MODE0 | INPUT */
 			0x19e 0x000	/* MCSPI1_CS0, MODE0 | OUTPUT */
 			0x1a0 0x000	/* MCSPI1_CS1, MODE0 | OUTPUT */
-			0x1a6 0x100	/* MCSPI2_CLK, MODE0 | INPUT */
-			0x1a8 0x000	/* MCSPI2_SIMO, MODE0 | OUTPUT */
-			0x1aa 0x100	/* MCSPI2_SOMI, MODE0 | INPUT */
-			0x1ac 0x000	/* MCSPI2_CS0, MODE0 | OUTPUT */
 			0x1ae 0x004	/* MCSPI2_CS1, MODE4 | OUTPUT */
 			0x1b0 0x104	/* SYS_NIRQ, MODE4 | INPUT  */
 			0x1b2 0x004	/* SYS_CLKOUT2, MODE4 | OUTPUT  */
@@ -228,6 +224,24 @@
 	wdi_phy_safe_mode: pinmux_wdi_phy_safe_mode {
 		pinctrl-single,pins = <
 			0x142 0x10F /* MCBSP_FSX | INPUT | PULLDOWN */
+		>;
+	};
+
+	c55_pins_off: pinmux_c55_pins_off {
+		pinctrl-single,pins = <
+			0x1a6 0x100	/* MCSPI2_CLK, MODE0 | INPUT */
+			0x1a8 0x000	/* MCSPI2_SIMO, MODE0 | OUTPUT */
+			0x1aa 0x100	/* MCSPI2_SOMI, MODE0 | INPUT */
+			0x1ac 0x000	/* MCSPI2_CS0, MODE0 | OUTPUT */
+		>;
+	};
+
+	c55_pins_on: pinmux_c55_pins_on {
+		pinctrl-single,pins = <
+			0x1a6 0x107	/* MCSPI2_CLK, MODE7 (SAFE) | INPUT */
+			0x1a8 0x107	/* MCSPI2_SIMO, MODE7 (SAFE) | INPUT */
+			0x1aa 0x107	/* MCSPI2_SOMI, MODE7 (SAFE) | INPUT */
+			0x1ac 0x107	/* MCSPI2_CS0, MODE7 (SAFE) | INPUT */
 		>;
 	};
 };
