Interface to modify afe registers
Change-Id: Ifea71cc6e998b05d7be760282bd7f15fec5f757a

--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -68,6 +68,10 @@
 		lightsensor {
 			compatible = "mot,m4als";
 		};
+                heartratesensor {
+                        compatible = "mot,m4heartrate";
+                };
+
 	};
 
 	sound {
