defconfig: minnow: disable TI 12XX wireless lan driver
Disable Texas Instruments WL12XX wireless LAN driver

Change-Id: Ie063515f68d850637876dcdc6b21411b7e947430

--- a/arch/arm/configs/eng_minnow_defconfig
+++ b/arch/arm/configs/eng_minnow_defconfig
@@ -1089,7 +1089,7 @@ CONFIG_WLAN=y
 # CONFIG_RTLWIFI is not set
 CONFIG_WL_TI=y
 # CONFIG_WL1251 is not set
-CONFIG_WL12XX=y
+# CONFIG_WL12XX is not set
 CONFIG_WL18XX=y
 CONFIG_WLCORE=y
 # CONFIG_WLCORE_SPI is not set
